# sem_dist

./: README.md  code.py  main.py  pyproject.toml  rendu.md
tp2/: README.md  main.py
