[project]
name = "sem-dist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fr-core-news-sm",
    "numpy>=2.4.3",
    "spacy>=3.8.11",
]

[tool.uv.sources]
fr-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/fr_core_news_sm-3.8.0/fr_core_news_sm-3.8.0-py3-none-any.whl" }
